--- a/example.yaml
+++ b/example.yaml
@@ -1,7 +1,7 @@
-company: "Volvo"
-position: "Co-op: Diagnostic Data Engineering (Fall 2025)"
+company: "Marklogic"
+position: "Marklogic Developer Intern"
 passionate_about: "creating quality software to solve real world problems"
-skill_evidence: "extensive experience with machine learning and data processing, in both my job experience and personal projects"
+skill_evidence: "extensive experience with frontend and backend web development and systems programming, in both my job experience and personal projects"
 email: "chaseuelt@gmail.com"
 phone: "+1 971-222-7416"
 website: "https://cueltschey.com"
